# openpaw-concept

./: .coverage  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.dev.yaml  docker-compose.dev.yml  docker-compose.yaml  execution-list.md  pyproject.toml  sample.env
.github/workflows/: ci.yml
docs/: adr.md  claude-integration.md  heartbeat.md  openclaw-soul.md  plan.md  sub-agent-approaches.md  task-queues.md  task.md  terminal-ui.md  upgrade-ideas.md  whatsapp-integration-greenapi.md  whatsapp-integration-pywa.md  whatsapp-integration.md
docs/developer/: approval-gates.md  execution-list.md  memory-execution-plan.md  memory.md  open-questions.md  plan.md  sub-agent-approaches.md  upgrade-ideas.md  whatsapp-comparison.md  whatsapp-integration-pywa.md  whatsapp-integration.md
docs/user/: 01-why-temporal.md  02-openpaw-features.md
scripts/: create-namespace.sh  green-api-basic.py  green-api-diag.py  neonize-async.py  neonize-basic.py  setup-postgres-es.sh  start-mlx-server.sh  test-anthropic.py  test-open-router-free.py
scripts/logins/: whatsapp-code.py  whatsapp-qr.py  whatsapp.py
src/worker/: worker.py  (+1 more)
tests/: test_approval_gate.py  test_bash_command.py  test_btw.py  test_compaction.py  test_file_operations.py  test_heartbeat.py  test_llm_call.py  test_openai_client.py  test_openrouter_client.py  test_openrouter_tools.py  test_state_io.py  test_sub_agent.py  test_terminal.py  test_tool_command.py  test_tool_handler_coverage.py  test_tool_loader.py  test_workflow.py  test_workflow_tools.py
tools/: README.md
(+107 files in other folders)
