[project]
name = "opentlawpy"
version = "0.1.0"
description = "Temporal-based agentic system with WhatsApp integration"
requires-python = ">=3.13"
dependencies = [
    "temporalio<=2.0.0",
    "neonize==0.3.15.post0",
    "anthropic<=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0",
    "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentlawpy"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
